force-app/main/default/objects/Lead_Capture__c/Lead_Capture__c.object-meta.xml
<CustomObject>
    <label>Lead Capture</label>
    <nameField>
        <displayFormat>LC-{0000000}</displayFormat>
        <label>Lead Capture Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Captures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>