force-app/main/default/objects/Lead_Capture__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <label>Broker Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaign_Code__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAX REAL ESTATE ONE PERSON COMPANY LLC</fullName>
            </value>
            <value>
                <fullName>ONE GLOBAL REAL ESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>BRICKS N WOODS REAL ESTATE BROKERAGE L.L.C</fullName>
            </value>
            <value>
                <fullName>CITY HEIGHTS PROPERTIES</fullName>
            </value>
            <value>
                <fullName>UNIQUE ZONE REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>FOOT PRINT REAL ESTATE BROKER</fullName>
            </value>
            <value>
                <fullName>ARTEGO REALESTATE</fullName>
            </value>
            <value>
                <fullName>SAMSUN GODWIN CONSULTING - F.Z.E</fullName>
            </value>
            <value>
                <fullName>MONOLITH REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>I B I A REALTY L.L.C</fullName>
            </value>
            <value>
                <fullName>RANGE INTERNATIONAL PROPERTY INVESTMENT ONE PERSON COMPANY LLC</fullName>
            </value>
            <value>
                <fullName>VARTUR REAL ESTATE BROKERAGE</fullName>
            </value>
            <value>
                <fullName>SPRING FIELD REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>STONE HOUSE REAL ESTATE BROKERAGE LLC</fullName>
            </value>
            <value>
                <fullName>CORNERSTONE REAL ESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>DRE HOMES REAL ESTATE BROKER</fullName>
            </value>
            <value>
                <fullName>PROVIDENT REAL ESTATE BROKER</fullName>
            </value>
            <value>
                <fullName>DOMINANTA REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>AVALON PROPERTIES</fullName>
            </value>
            <value>
                <fullName>WAY ROYAL REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>Kuruvilla World Wide AG</fullName>
            </value>
            <value>
                <fullName>AWS REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>BK REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>UNIQUE PROPERTIES L L C</fullName>
            </value>
            <value>
                <fullName>ROOFS AND ROOTS REAL ESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>DESEA GLOBAL PROPERTIES L.L.C</fullName>
            </value>
            <value>
                <fullName>TURNKEY PROPERTIES</fullName>
            </value>
            <value>
                <fullName>2F PROPERTIES</fullName>
            </value>
            <value>
                <fullName>S Y CAPITAL ESTATES L.L.C</fullName>
            </value>
            <value>
                <fullName>BEST LUXURY PROPERTIES L.L.C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>