force-app/main/default/objects/Lead_Capture__c/fields/Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Code__c</fullName>
    <label>Campaign Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Location__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2024-08-31/SINGAPORE/Road Shows/FOOT PRINT REAL ESTATE BROKER</fullName>
            </value>
            <value>
                <fullName>2024-08-31/London/Road Shows/LUXURY LIVING HOMES INTERNATIONAL LTD</fullName>
            </value>
            <value>
                <fullName>2024-08-31/Hyderabad/Road Shows/NEST HUNTERS REAL ESTATE LLC</fullName>
            </value>
            <value>
                <fullName>2024-08-31/Baku/Road Shows/H J REAL ESTATES</fullName>
            </value>
            <value>
                <fullName>2024-09-01/Birmingham/Road Shows/ELAN REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>2024-08-25/Pune/Business Trip/SQUAREA GULF REAL ESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-05/Bogota/Road Shows/J A Z REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>2024-09-07/Delhi/Road Shows/CASA REGAL PROPERTIES L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-07/Lagos/Road Shows/EMPIRE HILLS REAL ESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-07/Hamburg/Road Shows/FOOT PRINT REAL ESTATE BROKER</fullName>
            </value>
            <value>
                <fullName>2024-09-07/Ludhiana/Road Shows/GREHA PRAVESH REAL ESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-07/Cochin/Road Shows/FIFTY SIX REALTY L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-07/Baghdad/Road Shows/VILA L.L.C-FZ</fullName>
            </value>
            <value>
                <fullName>2024-09-07/Chicago/Road Shows/PROVIDENT REAL ESTATE BROKER L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-07/Colombo/Road Shows/BENCHMARK PROPERTIES</fullName>
            </value>
            <value>
                <fullName>2024-09-13/Abuja/Road Shows/SPRING FIELD REAL ESTATE</fullName>
            </value>
            <value>
                <fullName>2024-09-14/Hong Kong/Road Shows/KNIGHTSBRIDGE &amp; PARTNERS (HK) LIMITED</fullName>
            </value>
            <value>
                <fullName>2024-09-14/Dallas/Road Shows/FOOT PRINT REAL ESTATE BROKER</fullName>
            </value>
            <value>
                <fullName>2024-09-14/Zurich/Road Shows/M G L REALESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-14/Houston/Road Shows/RAYNA PROPERTIES</fullName>
            </value>
            <value>
                <fullName>2024-09-14/Miami/Road Shows/JAPSONS REALTY L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-14/CAPETOWN/Road Shows/RANGE INTERNATIONAL PROPERTY INVESTMENT ONE PERSON COMPANY L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-14/Frankfurt/Road Shows/KREDIUM TECHNOLOGIES L L C - DUBAI BRANCH</fullName>
            </value>
            <value>
                <fullName>2024-09-21/Coimbatore/Road Shows/THE G O A T REAL ESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-21/Hyderabad/Road Shows/HOMES 4 LIFE REAL ESTATE BROKER (LLC)</fullName>
            </value>
            <value>
                <fullName>2024-09-21/London/Road Shows/AEON TRISL INVESTMENTS LIMITED</fullName>
            </value>
            <value>
                <fullName>2024-09-21/Manchester/Road Shows/ELEVATION INTERNATIONAL REAL ESTATE L.L.C</fullName>
            </value>
            <value>
                <fullName>2024-09-21/Mumbai/Road Shows/FOOT PRINT REAL ESTATE BROKER</fullName>
            </value>
            <value>
                <fullName>2024-09-21/SINGAPORE/Road Shows/FOOT PRINT REAL ESTATE BROKER</fullName>
            </value>
            <value>
                <fullName>2024-09-21/Stuttgart/Road Shows/ALLEGIANCE REAL ESTATE L.L.C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>