force-app/main/default/objects/Lead_Capture__c/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Events</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Lead Captures</relationshipLabel>
    <relationshipName>Lead_Captures</relationshipName>
    <type>Lookup</type>
</CustomField>