force-app/main/default/objects/Lead_Capture__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Abuja</fullName>
            </value>
            <value>
                <fullName>Addis Ababa</fullName>
            </value>
            <value>
                <fullName>Al Ain</fullName>
            </value>
            <value>
                <fullName>Almaty</fullName>
            </value>
            <value>
                <fullName>Amsterdam</fullName>
            </value>
            <value>
                <fullName>Astana</fullName>
            </value>
            <value>
                <fullName>BANGALORE</fullName>
            </value>
            <value>
                <fullName>Banglore</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Belgrade</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Bucharest</fullName>
            </value>
            <value>
                <fullName>Bursa</fullName>
            </value>
            <value>
                <fullName>Cairo</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Cape Town</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>CHENGDU</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>CRAIOVA</fullName>
            </value>
            <value>
                <fullName>Dakar</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Doha</fullName>
            </value>
            <value>
                <fullName>Durban</fullName>
            </value>
            <value>
                <fullName>Dusseldorf</fullName>
            </value>
            <value>
                <fullName>ERDOS</fullName>
            </value>
            <value>
                <fullName>Frankfurt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>