force-app/main/default/objects/Lead_Capture__c/validationRules/Mobile_or_Email_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_or_Email_Mandatory</fullName>
    <active>true</active>
    <description>Either the mobile or the Email value should be filled</description>
    <errorConditionFormula>ISBLANK( Email__c)  &amp;&amp;  ISBLANK( Mobile_Number__c )</errorConditionFormula>
    <errorMessage>Either the mobile or the Email value should be filled</errorMessage>
</ValidationRule>